--- a/oci-learn-lz/exercise1/oci_learn_lz_iam.yml
+++ b/oci-learn-lz/exercise1/oci_learn_lz_iam.yml
@@ -10,6 +10,9 @@ compartments_configuration:
     CMP-NETWORK-KEY:
       name: cmp-network
       description: oci-learn-lz Shared Network Compartment
+    CMP-SECURITY-KEY:
+      name: cmp-security
+      description: oci-learn-lz Shared security Compartment
     CMP-CHANNELS-KEY:
       name: cmp-channels
       description: oci-learn-lz Channels Domain dedicated Compartment
@@ -18,9 +21,26 @@ compartments_configuration:
           name: cmp-channels-network
           description: oci-learn-lz Channels domain shared networking compartment
             within the domain
-        CMP-CHANNELS-NONPROD-KEY:
-          name: cmp-channels-nonprod
-          description: oci-learn-lz Channels domain for non-prod environment compartment
+        CMP-CHANNELS-DEV-KEY:
+          name: cmp-channels-dev
+          description: oci-learn-lz Channels domain for dev environment compartment
+        CMP-CHANNELS-PROD-KEY:
+          name: cmp-channels-prod
+          description: oci-learn-lz Channels domain for Prod environment compartment
+    CMP-INTEGRATION-KEY:
+      name: cmp-integration
+      description: oci-learn-lz integration Domain dedicated Compartment
+      children:
+        CMP-INTEGRATION-NETWORK-KEY:
+          name: cmp-integration-network
+          description: oci-learn-lz integration domain shared networking compartment
+            within the domain
+        CMP-INTEGRATION-DEV-KEY:
+          name: cmp-integration-dev
+          description: oci-learn-lz integration domain for dev environment compartment
+        CMP-INTEGRATION-PROD-KEY:
+          name: cmp-integration-prod
+          description: oci-learn-lz integration domain for Prod environment compartment
 groups_configuration:
   groups: {}
 dynamic_groups_configuration:
